@@ -1,9 +1,10 @@
-20060715:  version 0.9.1 (not yet released):
+20060724:  version 0.9.1 (not yet released):
            * make sure llcrnrlat and llcrnrlon are not at poles for mercator.
            * use Eric Firing's new quiver in Basemap quiver method.
            * interp functions now work with masked arrays.
            * added some sanity checks for projection parameters.
            * change from classic to new-style classes.
+           * removed deprecated 'createfigure' method.
 20060609:  version 0.9:
            * updated for new matplotlib aspect ratio handling.
            Now maps will always have the correct aspect ratio.
